--- a/default.css
+++ b/default.css
@@ -13,11 +13,11 @@ body {margin-bottom:0px; margin-left:0px; margin-right:0px; margin-top:0px}
 .f24b{font-family: "Arial Black", Gadget, sans-serif; font-size:24px}
 
 .leftbar-bg {
-	background-image: url(http://pinpointusstage.pinpoint.test/oe/images/hmpg_08.jpg);
+	background-image: url(https://pinpointus.net/oe/images/hmpg_08.jpg);
 	background-repeat: no-repeat;
 }
 .topmenu-bg {
-	background-image: url(http://pinpointusstage.pinpoint.test/oe/images/hmpg_07.jpg);
+	background-image: url(https://pinpointus.net/oe/images/hmpg_07.jpg);
 	background-repeat: repeat-x;
 }
 .leftbarbtm-bg {
