--- a/default.css
+++ b/default.css
@@ -21,7 +21,7 @@ body {margin-bottom:0px; margin-left:0px; margin-right:0px; margin-top:0px}
 	background-repeat: repeat-x;
 }
 .leftbarbtm-bg {
-	background-image: url(images/hmpg_10.jpg);
+	background-image: url(https://pinpointus.net/oe/images/hmpg_10.jpg);
 	background-repeat: repeat-y;
 }
 center {
