--- a/styles.css
+++ b/styles.css
@@ -2405,7 +2405,7 @@ textarea.form-control {
 }
 .style-info-container {
   padding: 15px;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #bdbdbd;
   border-radius: 4px;
 }
 
@@ -2429,14 +2429,14 @@ textarea.form-control {
   border: 1px solid #e0e0e0;
 }
 
-.size-qty-table td {
+.size-qty-table td, .data-table.size-qty-table td {
   padding: 4px;
   text-align: center;
   border: 1px solid #e0e0e0;
 }
 
 .size-qty-table .qty-input {
-  width: 60px;
+  width: 50px;
   text-align: center;
   padding: 4px 8px;
   border: 1px solid #ddd;
@@ -2459,7 +2459,7 @@ textarea.form-control {
 }
 .add-personalization-container {
   padding: 15px;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #bdbdbd;
   border-radius: 4px;
 }
 .add-btn-sm-green-rounded {
@@ -2481,7 +2481,7 @@ textarea.form-control {
   display: inline-block;
   width: auto;
   line-height: 22px;
-  padding: 4px 8px;
+  padding: 6px 8px;
   border: 1px solid #ddd;
   background: #fff;
   border-radius: 4px;
