--- a/styles.css
+++ b/styles.css
@@ -1093,8 +1093,7 @@ button {
 .form-control {
   display: block;
   width: 100%;
-  height: 34px;
-  padding: 6px 12px;
+  padding: 6px 8px;
   font-size: 13px;
   line-height: 1.42857143;
   color: #555;
@@ -2264,6 +2263,9 @@ textarea.form-control {
   text-align: left !important;
 }
 /* Margin utils */
+.pui-mt-none{
+    margin-top: 0 !important;
+}
 .pui-mt-5px {
   margin-top: 5px !important;
 }
@@ -2276,6 +2278,9 @@ textarea.form-control {
 .pui-mt-20px {
   margin-top: 20px !important;
 }
+.pui-mb-none{
+    margin-bottom: 0 !important;
+}
 .pui-mb-5px {
   margin-bottom: 5px !important;
 }
@@ -2287,6 +2292,42 @@ textarea.form-control {
 }
 .pui-mb-20px {
   margin-bottom: 20px !important;
+}
+.pui-ms-5px{
+    margin-left: 5px!important;
+}
+.pui-ms-10px{
+    margin-left: 10px !important;
+}
+.pui-ms-15px{
+    margin-left: 15px !important;
+}
+.pui-ms-20px{
+    margin-left: 20px !important;
+}
+.pui-ms-25px{
+    margin-left: 25px !important;
+}
+.pui-ms-30px{
+    margin-left: 30px !important;
+}
+.pui-me-5px{
+    margin-right: 5px !important;
+}
+.pui-me-10px{
+    margin-right: 10px !important;
+}
+.pui-me-15px{
+    margin-right: 15px !important;
+}
+.pui-me-20px{
+    margin-right: 20px !important;
+}
+.pui-me-25px{
+    margin-right: 25px !important;
+}
+.pui-me-30px{
+    margin-right: 30px !important;
 }
 /* Flat Goods Table Styles */
 .flat-goods-list .form-section {
@@ -2715,7 +2756,24 @@ textarea.form-control {
 .expand-all-container .checkbox-container{
     display: inline-flex;
     align-items: center;
+    margin-bottom: 0px;
 }
 .expand-all-container .checkbox-container input{
     margin-right: 5px;
+}
+.add-option-btn-sm{
+    background: white;
+    border: 1px dashed #999;
+    color: #0066cc;
+    padding: 2px 5px 4px 5px;
+    text-decoration: underline;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 1;
+    display: inline-block;
+    vertical-align: middle;
+    transition: all 0.2s;
+    white-space: nowrap;
 }
